--- a/ml-apps.ipynb
+++ b/ml-apps.ipynb
@@ -6,7 +6,6 @@
     "colab": {
       "name": "ml-apps.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +34,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/DJCordhose/ml-workshop/blob/master/notebooks/interp/legacy-innovation-hh-bl-to-ml.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/embarced/notebooks/blob/master/ml-apps.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -45,18 +44,9 @@
         "id": "Xrxz2kmJDuPh"
       },
       "source": [
-        "# Geschäftslogik durch Machine Learning ersetzen?\n",
+        "# Machine Learning Applications\n",
         "\n",
-        "https://www.meetup.com/en-AU/Legacy-Innovation-Hamburg/events/268268757/\n",
-        "\n",
-        "Dieses notebook: http://bit.ly/innovation-legacy-gl\n",
-        "\n",
-        "_Manche Geschäftslogik folgt festen Regeln oder gar Gesetzen und lässt sich dementsprechend klar mit Wenn-Dann-Regeln lösen. In anderen Fällen erweist sie sich jedoch als besorgniserregend schwammig, schwer zu bewerten und ebenso schwer zu warten. Am Beispiel eines Anwendungsfalls aus der Versicherungsbranche werden wir eine Lösung mit klassischer Geschäftslogik und eine mit Machine Learning erstellen. Diese werden wir dann bewerten und überlegen, wann es Sinn ergeben kann, Geschäftslogik durch ein Machine Learning Modell zu ersetzen._\n",
-        "\n",
-        "\n",
-        "_Oliver Zeigermann, oliver.zeigermann@gmail.com, https://twitter.com/DJCordhose, https://www.linkedin.com/in/oliver-zeigermann-34989773/_\n",
-        "\n",
-        "<img src='https://github.com/DJCordhose/ml-workshop/blob/master/notebooks/interp/olli-rb.jpg?raw=1' height=300>"
+        "(C) https://www.embarc.de/"
       ]
     },
     {
@@ -106,7 +96,7 @@
       "source": [
         "!nvidia-smi"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,7 +143,7 @@
         "except Exception:\n",
         "  pass"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -179,7 +169,7 @@
         "import tensorflow as tf\n",
         "print(tf.__version__)"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,104 +270,7 @@
         "colab": {}
       },
       "source": [
-        "# ignore this, it is just technical code to plot decision boundaries\n",
-        "# Adapted from:\n",
-        "# http://scikit-learn.org/stable/auto_examples/neighbors/plot_classification.html\n",
-        "# http://jponttuset.cat/xkcd-deep-learning/\n",
-        "# https://matplotlib.org/gallery/images_contours_and_fields/contourf_demo.html\n",
-        "\n",
-        "from matplotlib.ticker import FuncFormatter\n",
-        "\n",
-        "import numpy as np\n",
-        "\n",
-        "def meshGrid(x_data=None, y_data=None):\n",
-        "    h = 1  # step size in the mesh\n",
-        "    x_min, x_max = 10, 110\n",
-        "    y_min, y_max = 80, 170\n",
-        "#     x_min, x_max = x_data.min() - 1, x_data.max() + 1\n",
-        "#     y_min, y_max = y_data.min() - 1, y_data.max() + 1\n",
-        "    xx, yy = np.meshgrid(np.arange(x_min, x_max, h),\n",
-        "                         np.arange(y_min, y_max, h))\n",
-        "    return (xx,yy)\n",
-        "\n",
-        "def plot_samples(samples, ax, legend):\n",
-        "    classes = samples[2]\n",
-        "    scatter = ax.scatter(samples[0], samples[1], c=classes, cmap=cmap, s=50, marker='o', edgecolors='k')\n",
-        "\n",
-        "    # https://matplotlib.org/3.1.0/gallery/lines_bars_and_markers/scatter_with_legend.html\n",
-        "    formatter = FuncFormatter(lambda s,t: \"Many Accidents\" if s == 0 else \"No Accidents\" if s == 1 else \"Few Accidents\")\n",
-        "    class_legend = ax.legend(*scatter.legend_elements(alpha=0.6, prop='colors', fmt=formatter), title=\"Classes\")\n",
-        "    ax.add_artist(class_legend)\n",
-        "    \n",
-        "    return ax, scatter\n",
-        "\n",
-        "def plot_samples_markers(samples, ax, legend):\n",
-        "  y = samples[2]\n",
-        "  bad = samples[y == 0]\n",
-        "  good = samples[y == 1]\n",
-        "  fair = samples[y == 2]\n",
-        "\n",
-        "  labels = [\"High Risk\", \"Low Risk\", \"Medium Risk\"]\n",
-        "  classes = [bad, good, fair]\n",
-        "  markers = ['v', 'd', '^']\n",
-        "\n",
-        "  for label, clazz, color, marker in zip(labels, classes, colors, markers):\n",
-        "      ax.scatter(\n",
-        "          clazz[0], \n",
-        "          clazz[1],\n",
-        "          label=label,\n",
-        "          color=color,\n",
-        "          marker=marker,\n",
-        "          s=100,\n",
-        "          edgecolors='k',\n",
-        "          alpha=0.8)\n",
-        "  if legend:\n",
-        "    ax.legend()\n",
-        "  return ax, None\n",
-        "      \n",
-        "\n",
-        "def plotPrediction(clf, x_data, y_data, x_label, y_label, ground_truth, title=\"\", \n",
-        "                   n_samples=None, proba=True, prediction=True, legend=True, \n",
-        "                   scatter=True,\n",
-        "                   X=None,\n",
-        "                   ax=None\n",
-        "                  ):\n",
-        "    if x_data is not None:\n",
-        "      assert x_data.shape == y_data.shape, \"x and y must have the same dimension\"\n",
-        "    if x_data  is not None and ground_truth is not None:\n",
-        "      assert x_data.shape == ground_truth.shape, \"input and ground truth need the same number of samples\"\n",
-        "    xx,yy = meshGrid(x_data, y_data)\n",
-        "    if ax is None:\n",
-        "      fig, ax = plt.subplots()\n",
-        "\n",
-        "    if clf:\n",
-        "        if X is not None:\n",
-        "          Z = clf.predict_proba(X)\n",
-        "        else:\n",
-        "          Z = clf.predict_proba(np.c_[yy.ravel(), xx.ravel()])\n",
-        "\n",
-        "        if proba:\n",
-        "            probaZ = Z.max(axis=1)\n",
-        "            probaZ = probaZ.reshape(xx.shape)\n",
-        "            ax.contourf(xx, yy, probaZ, cmap=plt.cm.binary, alpha=.4)\n",
-        "\n",
-        "        if prediction:\n",
-        "            Z = Z.argmax(axis=1)\n",
-        "            Z = Z.reshape(xx.shape)\n",
-        "            ax.contourf(xx, yy, Z, cmap=cmap, alpha=.3)\n",
-        "\n",
-        "    ax.set_xlim(xx.min(), xx.max())\n",
-        "    ax.set_ylim(yy.min(), yy.max())\n",
-        "    ax.set_xlabel(x_label, fontsize=font_size)\n",
-        "    ax.set_ylabel(y_label, fontsize=font_size)\n",
-        "    ax.set_title(title, fontsize=title_font_size)\n",
-        "    \n",
-        "    if scatter:\n",
-        "      samples = pd.DataFrame(np.array([x_data, y_data, ground_truth]).T)\n",
-        "      if n_samples:\n",
-        "        samples = samples.sample(n_samples, random_state=42)\n",
-        "      plot_samples_markers(samples, ax, legend)\n",
-        "    return ax \n"
+        ""
       ],
       "execution_count": 0,
       "outputs": []
@@ -423,7 +316,7 @@
       "source": [
         "df.describe()"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -617,7 +510,7 @@
         "               x_label='Age', y_label='Max Speed', ground_truth=y_test,\n",
         "               title=\"Risk Classification, test data\");"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -713,14 +606,13 @@
         "colab_type": "code",
         "outputId": "67454481-a280-466e-d6cc-bf6f3c836953",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "random_clf.score(X_test_2_dim, y)"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -743,8 +635,7 @@
         "colab_type": "code",
         "outputId": "8ec4025e-621a-4b99-a64d-fc0c14324dee",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
@@ -752,7 +643,7 @@
         "               'Age', 'Max Speed', y_test,\n",
         "                title=\"Test Data, Random Model\");"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -804,7 +695,7 @@
         "                title=\"Test Data, Rule based Model\")\n",
         "rule_clf.score(X_test_2_dim, y)"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -846,7 +737,7 @@
       "source": [
         "rule_clf.predict_proba([[100, 19]])"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -901,7 +792,7 @@
         "rule_clf = RuleClassifier()        \n",
         "rule_clf.score(X_train_2_dim, y_train)"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -933,7 +824,7 @@
         "               'Age', 'Max Speed', y_train,\n",
         "                title=\"Train Data, Rule based Model\");"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1093,7 +984,7 @@
         "\n",
         "plot_model(model)"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1140,7 +1031,7 @@
         "                    batch_size=BATCH_SIZE, \n",
         "                    verbose=0)"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -11018,7 +10909,7 @@
         "               'Age', 'Max Speed', y_test,\n",
         "                title=\"Test Data, NN\");"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -11072,7 +10963,7 @@
         "test_loss, test_accuracy = model.evaluate(X_test_2_dim, y_test, batch_size=BATCH_SIZE, verbose=0)\n",
         "test_accuracy"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11112,7 +11003,7 @@
       "source": [
         "rule_clf.score(X_test_2_dim, y_test)"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11142,7 +11033,7 @@
       "source": [
         "model.summary()"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -11233,7 +11124,7 @@
         "mesh_data = np.c_[yy.ravel(), xx.ravel()]\n",
         "mesh_data.shape"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11263,7 +11154,7 @@
       "source": [
         "mesh_data[0]"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11294,7 +11185,7 @@
         "pred = model.predict(mesh_data)\n",
         "pred.shape"
       ],
-      "execution_count": 36,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11325,7 +11216,7 @@
         "pred_sparse = pred.argmax(axis=1)\n",
         "pred_sparse.shape"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11363,7 +11254,7 @@
         ")\n",
         "%time surrogate_model.fit(mesh_data, pred_sparse)"
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -11406,7 +11297,7 @@
       "source": [
         "surrogate_model.tree_.max_depth"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11436,7 +11327,7 @@
       "source": [
         "surrogate_model.score(X_test_2_dim, y_test)"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11468,7 +11359,7 @@
         "               'Age', 'Max Speed', y_test,\n",
         "                title=\"Test Data, Surrogate\");"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -11527,7 +11418,7 @@
         "          proportion=True,\n",
         "          filled=True);"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -11568,7 +11459,7 @@
         "# speed, age\n",
         "surrogate_model.feature_importances_"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11605,7 +11496,7 @@
         "# groups: \"High Risk\", \"Low Risk\", \"Medium Risk\"\n",
         "surrogate_model.predict([sample])"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11689,7 +11580,7 @@
         ")\n",
         "viz"
       ],
-      "execution_count": 46,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -11863,7 +11754,7 @@
       "source": [
         "generate_code(surrogate_model, feature_names, class_names)"
       ],
-      "execution_count": 49,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -11907,7 +11798,7 @@
       "source": [
         "generate_code(surrogate_model, feature_names, class_names, batch=False)"
       ],
-      "execution_count": 50,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -11954,7 +11845,7 @@
       "source": [
         "generate_nested_code(surrogate_model, feature_names, class_names)"
       ],
-      "execution_count": 51,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
