--- a/ml-apps.ipynb
+++ b/ml-apps.ipynb
@@ -6,6 +6,7 @@
     "colab": {
       "name": "ml-apps.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,9 +55,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "BtVLlfXGGYgt",
-        "colab": {}
+        "colab": {},
+        "cellView": "form"
       },
       "source": [
+        "#@title\n",
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline\n",
         "\n",
@@ -77,200 +80,120 @@
         "\n",
         "colors = ['#FF0000', '#0000FF', '#FFFF00']\n",
         "\n",
-        "cmap = ListedColormap(colors)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "FxSoc0Ebm1kt",
-        "colab_type": "code",
-        "outputId": "5c712b44-f0a8-4dcb-aad5-c2eef2229866",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 316
-        }
-      },
-      "source": [
-        "!nvidia-smi"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Wed Mar 18 19:05:40 2020       \n",
-            "+-----------------------------------------------------------------------------+\n",
-            "| NVIDIA-SMI 440.59       Driver Version: 418.67       CUDA Version: 10.1     |\n",
-            "|-------------------------------+----------------------+----------------------+\n",
-            "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
-            "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
-            "|===============================+======================+======================|\n",
-            "|   0  Tesla P100-PCIE...  Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   36C    P0    26W / 250W |      0MiB / 16280MiB |      0%      Default |\n",
-            "+-------------------------------+----------------------+----------------------+\n",
-            "                                                                               \n",
-            "+-----------------------------------------------------------------------------+\n",
-            "| Processes:                                                       GPU Memory |\n",
-            "|  GPU       PID   Type   Process name                             Usage      |\n",
-            "|=============================================================================|\n",
-            "|  No running processes found                                                 |\n",
-            "+-----------------------------------------------------------------------------+\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "BgRmy8QPEGkz",
-        "outputId": "00618c11-f6c6-44d1-da01-bed593ba1141",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "source": [
+        "cmap = ListedColormap(colors)\n",
+        "\n",
         "# Gives us a well defined version of tensorflow\n",
         "\n",
         "try:\n",
         "  # %tensorflow_version only exists in Colab.\n",
         "  %tensorflow_version 2.x\n",
         "except Exception:\n",
-        "  pass"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "TensorFlow 2.x selected.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "293DW4kG87rp",
-        "outputId": "c6baf08c-3d65-4e09-df59-a263e61a5cc8",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "source": [
-        "import tensorflow as tf\n",
-        "print(tf.__version__)"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "2.1.0\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "HJsI8x2m19fn",
-        "colab": {}
-      },
-      "source": [
-        "random_seed = 42"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "OU04hJFuoz00",
-        "colab": {}
-      },
-      "source": [
-        "tf.random.set_seed(random_seed)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "04zMLWbf1bB2",
-        "colab": {}
-      },
-      "source": [
-        "import numpy as np\n",
+        "  pass\n",
         "\n",
-        "np.random.seed(random_seed)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "pY_fjTEALQmc",
-        "colab": {}
-      },
-      "source": [
-        "# https://github.com/AndreasMadsen/python-lrcurve\n",
-        "!pip install -q lrcurve "
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "R-m5Tu2cLRUh",
-        "colab": {}
-      },
-      "source": [
-        "from lrcurve import KerasLearningCurve"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "aQ9zaYau8-SR",
-        "colab": {}
-      },
-      "source": [
+        "import tensorflow as tf\n",
+        "random_seed = 42\n",
+        "tf.random.set_seed(random_seed)\n",
+        "\n",
+        "import numpy as np\n",
+        "np.random.seed(random_seed)\n",
+        "\n",
         "import pandas as pd\n",
-        "import numpy as np"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "FqU593CIsUFn",
-        "colab": {}
-      },
-      "source": [
-        ""
+        "\n",
+        "# Adapted from:\n",
+        "# http://scikit-learn.org/stable/auto_examples/neighbors/plot_classification.html\n",
+        "# http://jponttuset.cat/xkcd-deep-learning/\n",
+        "# https://matplotlib.org/gallery/images_contours_and_fields/contourf_demo.html\n",
+        "\n",
+        "from matplotlib.ticker import FuncFormatter\n",
+        "\n",
+        "def meshGrid(x_data=None, y_data=None):\n",
+        "    h = 1  # step size in the mesh\n",
+        "    x_min, x_max = 10, 110\n",
+        "    y_min, y_max = 80, 170\n",
+        "#     x_min, x_max = x_data.min() - 1, x_data.max() + 1\n",
+        "#     y_min, y_max = y_data.min() - 1, y_data.max() + 1\n",
+        "    xx, yy = np.meshgrid(np.arange(x_min, x_max, h),\n",
+        "                         np.arange(y_min, y_max, h))\n",
+        "    return (xx,yy)\n",
+        "\n",
+        "def plot_samples(samples, ax, legend):\n",
+        "    classes = samples[2]\n",
+        "    scatter = ax.scatter(samples[0], samples[1], c=classes, cmap=cmap, s=50, marker='o', edgecolors='k')\n",
+        "\n",
+        "    # https://matplotlib.org/3.1.0/gallery/lines_bars_and_markers/scatter_with_legend.html\n",
+        "    formatter = FuncFormatter(lambda s,t: \"Many Accidents\" if s == 0 else \"No Accidents\" if s == 1 else \"Few Accidents\")\n",
+        "    class_legend = ax.legend(*scatter.legend_elements(alpha=0.6, prop='colors', fmt=formatter), title=\"Classes\")\n",
+        "    ax.add_artist(class_legend)\n",
+        "    \n",
+        "    return ax, scatter\n",
+        "\n",
+        "def plot_samples_markers(samples, ax, legend):\n",
+        "  y = samples[2]\n",
+        "  bad = samples[y == 0]\n",
+        "  good = samples[y == 1]\n",
+        "  fair = samples[y == 2]\n",
+        "\n",
+        "  labels = [\"High Risk\", \"Low Risk\", \"Medium Risk\"]\n",
+        "  classes = [bad, good, fair]\n",
+        "  markers = ['v', 'd', '^']\n",
+        "\n",
+        "  for label, clazz, color, marker in zip(labels, classes, colors, markers):\n",
+        "      ax.scatter(\n",
+        "          clazz[0], \n",
+        "          clazz[1],\n",
+        "          label=label,\n",
+        "          color=color,\n",
+        "          marker=marker,\n",
+        "          s=100,\n",
+        "          edgecolors='k',\n",
+        "          alpha=0.8)\n",
+        "  if legend:\n",
+        "    ax.legend()\n",
+        "  return ax, None\n",
+        "      \n",
+        "\n",
+        "def plotPrediction(clf, x_data, y_data, x_label, y_label, ground_truth, title=\"\", \n",
+        "                   n_samples=None, proba=True, prediction=True, legend=True, \n",
+        "                   scatter=True,\n",
+        "                   X=None,\n",
+        "                   ax=None\n",
+        "                  ):\n",
+        "    if x_data is not None:\n",
+        "      assert x_data.shape == y_data.shape, \"x and y must have the same dimension\"\n",
+        "    if x_data  is not None and ground_truth is not None:\n",
+        "      assert x_data.shape == ground_truth.shape, \"input and ground truth need the same number of samples\"\n",
+        "    xx,yy = meshGrid(x_data, y_data)\n",
+        "    if ax is None:\n",
+        "      fig, ax = plt.subplots()\n",
+        "\n",
+        "    if clf:\n",
+        "        if X is not None:\n",
+        "          Z = clf.predict_proba(X)\n",
+        "        else:\n",
+        "          Z = clf.predict_proba(np.c_[yy.ravel(), xx.ravel()])\n",
+        "\n",
+        "        if proba:\n",
+        "            probaZ = Z.max(axis=1)\n",
+        "            probaZ = probaZ.reshape(xx.shape)\n",
+        "            ax.contourf(xx, yy, probaZ, cmap=plt.cm.binary, alpha=.4)\n",
+        "\n",
+        "        if prediction:\n",
+        "            Z = Z.argmax(axis=1)\n",
+        "            Z = Z.reshape(xx.shape)\n",
+        "            ax.contourf(xx, yy, Z, cmap=cmap, alpha=.3)\n",
+        "\n",
+        "    ax.set_xlim(xx.min(), xx.max())\n",
+        "    ax.set_ylim(yy.min(), yy.max())\n",
+        "    ax.set_xlabel(x_label, fontsize=font_size)\n",
+        "    ax.set_ylabel(y_label, fontsize=font_size)\n",
+        "    ax.set_title(title, fontsize=title_font_size)\n",
+        "    \n",
+        "    if scatter:\n",
+        "      samples = pd.DataFrame(np.array([x_data, y_data, ground_truth]).T)\n",
+        "      if n_samples:\n",
+        "        samples = samples.sample(n_samples, random_state=42)\n",
+        "      plot_samples_markers(samples, ax, legend)\n",
+        "    return ax \n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -293,8 +216,6 @@
         "colab": {}
       },
       "source": [
-        "import pandas as pd\n",
-        "\n",
         "df = pd.read_csv('https://raw.githubusercontent.com/DJCordhose/ml-workshop/master/data/insurance-customers-1500.csv', sep=';')\n",
         "# local\n",
         "# df = pd.read_csv('../../data/insurance-customers-1500.csv', sep=';')"
