--- a/ml-apps/supervised.ipynb
+++ b/ml-apps/supervised.ipynb
@@ -45,7 +45,7 @@
         "id": "Xrxz2kmJDuPh"
       },
       "source": [
-        "# Machine Learning Applications\n",
+        "# Supervised Learning\n",
         "\n",
         "(C) https://www.embarc.de/"
       ]
@@ -56,7 +56,7 @@
         "colab_type": "code",
         "id": "BtVLlfXGGYgt",
         "cellView": "form",
-        "outputId": "7f07cc6d-e056-46e2-ae36-15e500d4ca0a",
+        "outputId": "106ce9f1-4729-4946-cfbb-ef5e69acd202",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -213,21 +213,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "YXoT8GaTg4fL",
-        "colab_type": "text"
-      },
-      "source": [
-        "# Part I: Supervised Learning"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "DG93276ziW8H",
         "colab_type": "text"
       },
       "source": [
-        "## Exericse I: Getting familiar with Colab Notebooks\n",
+        "\n",
+        "# Exericse I: Getting familiar with Colab Notebooks\n",
         "\n",
         "* notebooks are made up out of text and code cells\n",
         "* they can be executed in any order, but are typically supposed to be executed in order\n",
@@ -243,7 +234,7 @@
         "id": "xsEtwmvhBZqN"
       },
       "source": [
-        "## Loading and exploring our data set\n",
+        "# Loading and exploring our data set\n",
         "\n",
         "This is a database of customers of an insurance company. Each data point is one customer. The group represents the number of accidents the customer has been involved with in the past\n",
         "\n",
@@ -257,7 +248,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "3vRMCp_4CODu",
-        "outputId": "32bf25e9-ee7c-4fc2-fff0-e701d4805b35",
+        "outputId": "f4c28af4-e85b-4cd5-f6a8-8aefefa53b1a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -273,7 +264,7 @@
           "text": [
             "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
             "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r100 26783  100 26783    0     0   102k      0 --:--:-- --:--:-- --:--:--  102k\n"
+            "\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r100 26783  100 26783    0     0   105k      0 --:--:-- --:--:-- --:--:--  105k\n"
           ],
           "name": "stdout"
         }
@@ -284,7 +275,7 @@
       "metadata": {
         "id": "-4btz7dmQz2l",
         "colab_type": "code",
-        "outputId": "27d4c0a1-9c6e-4cdd-a02d-cd17462fbe0d",
+        "outputId": "4ae7c675-6691-4ab9-e2ee-8716b6b515d2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 187
@@ -332,7 +323,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "kzr738RwNKQ9",
-        "outputId": "f094f400-0328-4c06-f825-7fee23db865b",
+        "outputId": "a275d830-0f72-4563-cdec-e8c362282515",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -432,7 +423,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "lCCADc-ZHB1_",
-        "outputId": "1aab369b-7258-413b-e366-841f7c940efb",
+        "outputId": "6e770ae9-81dc-4d77-f728-b18933c1e50f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
@@ -569,7 +560,7 @@
       "metadata": {
         "id": "JdA7RYNzlcPj",
         "colab_type": "code",
-        "outputId": "dec5c1d0-2779-4cdf-9361-1d73ce74930c",
+        "outputId": "c6225746-f3bb-4b4d-d5df-5819310c1fd7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 565
@@ -602,7 +593,7 @@
       "metadata": {
         "id": "l200FVZOmnVT",
         "colab_type": "code",
-        "outputId": "31d241b3-f9da-42f9-b96b-de21d1a5be5f",
+        "outputId": "0e2f7891-d559-40fd-86b8-1f640a58ff00",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -633,7 +624,7 @@
       "metadata": {
         "id": "l4h1irivqfpZ",
         "colab_type": "code",
-        "outputId": "df0f7666-ee37-41b3-d776-195786117da3",
+        "outputId": "8107fbe5-3192-45d9-d937-8cbdc001e709",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -664,7 +655,7 @@
       "metadata": {
         "id": "XkJ-7mfzmve2",
         "colab_type": "code",
-        "outputId": "4c8ad222-e125-4071-b2ab-08643aff4efe",
+        "outputId": "dccaa249-9a01-45d5-cda5-1077d8e303ab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 580
@@ -704,7 +695,7 @@
         "id": "zR_Lz5vQ5m2H"
       },
       "source": [
-        "### First important concept: You train a machine with your data to make it learn the relationship between some input data and a certain label - this is called supervised learning"
+        "## First important concept: You train a machine with your data to make it learn the relationship between some input data and a certain label - this is called supervised learning"
       ]
     },
     {
@@ -726,7 +717,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "fHpidGkC4QJN",
-        "outputId": "ae916a0e-332f-424c-9303-df9b02156d58",
+        "outputId": "6c1e8fff-09e6-4662-e2e5-398ee4ba513d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -775,7 +766,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "V0em7WyS4cph",
-        "outputId": "ad94000a-ea82-411f-ead3-8c199ad0ccdd",
+        "outputId": "017d0a3f-6152-46fc-e55c-090f87b55db1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -885,7 +876,7 @@
         "id": "qsRqVhtDBZq6"
       },
       "source": [
-        "#### We restrict ourselves to two dimensions\n",
+        "### We restrict ourselves to two dimensions\n",
         "\n",
         "Miles is pretty much dependent on speed"
       ]
@@ -1001,7 +992,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "33Dh_Q35RqR_",
-        "outputId": "78f91a63-1e4a-4226-8071-d119362c2bf1",
+        "outputId": "873f3153-fc6a-4a2c-c154-257a8059326d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 532
@@ -1033,7 +1024,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "k1O_vyvY45wW",
-        "outputId": "a0e6473d-0bc3-45fe-ca7e-1b92b11e7c05",
+        "outputId": "94b71fed-98d9-48da-a061-7dcaa25128cc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
@@ -1070,7 +1061,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "umydOZWYBZsz",
-        "outputId": "7603b112-76e1-4592-beff-8b8028551973",
+        "outputId": "4ef2259d-eba6-4652-e677-df4575b945f9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -1088,8 +1079,8 @@
         {
           "output_type": "stream",
           "text": [
-            "CPU times: user 186 ms, sys: 17.5 ms, total: 203 ms\n",
-            "Wall time: 207 ms\n"
+            "CPU times: user 159 ms, sys: 15 ms, total: 174 ms\n",
+            "Wall time: 386 ms\n"
           ],
           "name": "stdout"
         }
@@ -1100,7 +1091,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "_bZmJk7r5tPL",
-        "outputId": "f63b1bfd-3d60-4e81-86eb-0a66c24fb5a5",
+        "outputId": "8b0c3b0c-a333-4914-d745-f6e40dc73f6d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1131,7 +1122,7 @@
       "metadata": {
         "id": "AXaS9yD38BOm",
         "colab_type": "code",
-        "outputId": "3ef85ff5-090c-4f2f-9c63-516bf200e64e",
+        "outputId": "bb693ec7-ff93-4579-8527-f5e30c5b6c70",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1163,7 +1154,7 @@
         "id": "XeAYKyNr4SA3"
       },
       "source": [
-        "## Stop here"
+        "# Stop here"
       ]
     },
     {
@@ -1173,7 +1164,7 @@
         "id": "n9qBc7l77kGs"
       },
       "source": [
-        "### Second important concept: To have an idea how well the training worked, we save some data to test our model on previously unseen data. \n",
+        "## Second important concept: To have an idea how well the training worked, we save some data to test our model on previously unseen data. \n",
         "\n",
         "* The real objective is to have a generalized model that works well on the test data.\n",
         "* How well it performs on this test data as opposed to the training data tells us quite a bit as well.\n",
@@ -1189,7 +1180,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "A7CUrbew7p4l",
-        "outputId": "68bc6f98-d6ee-4df0-baa6-b88d959d8223",
+        "outputId": "794b0917-fe86-4c40-c1da-a1acea821f4f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1252,7 +1243,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "AyBWaCai75Zy",
-        "outputId": "d0d8abd7-16a9-4cc5-9617-ee974df6edeb",
+        "outputId": "68f9c039-36ee-40e0-adf6-4417acb93378",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 532
@@ -1283,7 +1274,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "IqUX415c79dT",
-        "outputId": "d152fe92-2ce0-4888-9f7b-6f04b2d50406",
+        "outputId": "e0c77a3a-cfe9-4fb1-fea7-7deaf0dd27b1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 532
@@ -1316,7 +1307,7 @@
         "id": "1YvHKqfJBZs7"
       },
       "source": [
-        "### What is the best split?\n",
+        "## What is the best split?\n",
         "\n",
         "* assign a category to each node containing a certain set of samples\n",
         "* use a metric (Gini or Entropy) to decide how good a node would be based on that category\n",
@@ -1331,7 +1322,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "Nv6FueUFAbz0",
-        "outputId": "984d287a-1e56-4bb7-f35d-547f256ceb9a",
+        "outputId": "c8be7303-f780-4981-f841-56585e1b0275",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 153
@@ -1346,8 +1337,8 @@
         {
           "output_type": "stream",
           "text": [
-            "CPU times: user 3.75 ms, sys: 127 µs, total: 3.87 ms\n",
-            "Wall time: 4.5 ms\n"
+            "CPU times: user 3.34 ms, sys: 263 µs, total: 3.6 ms\n",
+            "Wall time: 12.4 ms\n"
           ],
           "name": "stdout"
         },
@@ -1375,7 +1366,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "-Gy8EW9RBZs7",
-        "outputId": "6ed0bb59-4a9e-40fe-f145-d2e7a0e36841",
+        "outputId": "dd4d9a54-4159-452a-e0d9-9c461db32cbe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1407,7 +1398,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "ht_rWYIxBZs-",
-        "outputId": "861c811f-9491-4396-b4e0-e639bd854f13",
+        "outputId": "d062280e-6540-47a9-9ac0-3f3d501312d5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 532
@@ -1439,7 +1430,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "c2Kcf4UHBZtA",
-        "outputId": "2ccb70b4-6b37-4207-eecb-e380d2be95b3",
+        "outputId": "731d75bd-8b8e-4105-a730-d83cec85525a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1469,7 +1460,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "1_Ui6EvOBZtI",
-        "outputId": "315905ce-785b-4e2c-bac6-063d79b4d812",
+        "outputId": "5b004ff8-63a3-4514-84d4-884cda7ebcda",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 532
@@ -1501,7 +1492,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "2gMNy0s_BZtK",
-        "outputId": "3690dba0-a9db-401e-d12b-ee785bdb92d0",
+        "outputId": "ae7a4510-dca6-4727-cffe-6a95c1e61228",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1533,7 +1524,7 @@
         "id": "t99FYmxH4-gF"
       },
       "source": [
-        "## Exercise II: Getting your feet wet fighting overfitting\n",
+        "# Exercise II: Getting your feet wet fighting overfitting\n",
         "\n",
         "_fighit overfitting and underfitting: try to make score for training and test as similar as possible while keeping them high at the same time_\n",
         "\n",
@@ -1547,7 +1538,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "2OEQ7gmQBZtR",
-        "outputId": "1131cf80-c479-461f-dfee-cb1e7185262d",
+        "outputId": "b941e4b4-c231-45f1-935c-67c8e8463a28",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 153
@@ -1566,8 +1557,8 @@
         {
           "output_type": "stream",
           "text": [
-            "CPU times: user 3.11 ms, sys: 21 µs, total: 3.13 ms\n",
-            "Wall time: 10.1 ms\n"
+            "CPU times: user 2.93 ms, sys: 0 ns, total: 2.93 ms\n",
+            "Wall time: 8.23 ms\n"
           ],
           "name": "stdout"
         },
@@ -1595,7 +1586,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "Q1kpHqFIBZtZ",
-        "outputId": "a204cf1a-bbdd-43c9-9667-d554e3d1dec9",
+        "outputId": "e58fe483-6475-48bc-fc6c-fa3668e5b75a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1625,7 +1616,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "xv9zx4rVBZth",
-        "outputId": "c81b1680-e6f3-43e8-add6-764fd56c1cba",
+        "outputId": "3d78076d-f482-4bec-ee7b-327452ecc0f5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1655,7 +1646,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "i2pYkd5mBZtT",
-        "outputId": "66feb63d-a887-4ebb-fac1-39442c674198",
+        "outputId": "9cee8c38-cba0-4a1b-e67f-e9eebe02677b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1685,7 +1676,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "TT1ka8ySBZtX",
-        "outputId": "4be0d1d1-f07b-4b61-b5e1-ac2da1f7d44d",
+        "outputId": "33b4bd44-b28d-429e-a3e6-f941ddb8c5c9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 532
@@ -1717,7 +1708,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "nUO2_IxYBZte",
-        "outputId": "f89823a0-f5f4-4aa3-cec3-90e241d47b06",
+        "outputId": "6454fe26-1a01-42b4-802e-619a034163ac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 532
@@ -1749,7 +1740,7 @@
       "metadata": {
         "id": "wMkgJBYPyTLr",
         "colab_type": "code",
-        "outputId": "57ff668c-5146-4495-c00d-ffa560773eef",
+        "outputId": "e9da6592-74b2-43a5-d3bf-54c67009bdac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 595
@@ -1788,52 +1779,6 @@
           }
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "mHrrPAM3h5Td",
-        "colab_type": "text"
-      },
-      "source": [
-        "# Part II: Unsupervised Learning"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "un-QE-hQkYTT",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9rPsK5DckZFB",
-        "colab_type": "text"
-      },
-      "source": [
-        "# Part III: Reinforcement Learning"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "nhPp9IFokbd7",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
