moved from wrong repo

--- a/deep/intro-classification.ipynb
+++ b/deep/intro-classification.ipynb
@@ -35,7 +35,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/embarced/notebooks/blob/master/deep/intro-classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/embarced/ml-concepts/blob/master/deep/intro-classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -44,7 +44,11 @@
         "id": "XdfXfXK2-CiG"
       },
       "source": [
-        "# Classification"
+        "# Classification\n",
+        "\n",
+        "_Based on given examples learn a function that can categorize a set of data into classes._\n",
+        "\n",
+        "_Objective: classify data having an unknown prediction_"
       ]
     },
     {
@@ -67,7 +71,7 @@
         "import tensorflow as tf\n",
         "tf.__version__"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -94,7 +98,7 @@
       "source": [
         "tf.random.set_seed(42)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -110,7 +114,7 @@
         "# notebook does not need GPU, but we could turn it on any time\n",
         "!nvidia-smi"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,7 +135,7 @@
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -147,7 +151,7 @@
         "\n",
         "figsize_3d = (12, 12)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -159,7 +163,7 @@
         "font_size=15\n",
         "title_font_size=25"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -174,7 +178,7 @@
       "source": [
         "!pip install colour"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,7 +200,7 @@
       "source": [
         "# %config InlineBackend.figure_format = 'svg'"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -549,7 +553,7 @@
         "    # sklearn etc...\n",
         "    return model.predict_proba(X)\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -639,7 +643,7 @@
         "                          ['#FF6666', '#6666FF'],  # 2 classes\n",
         "                          ]})"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -692,7 +696,7 @@
         "\n",
         "X.shape, y.shape"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -744,7 +748,7 @@
         "# https://en.wikipedia.org/wiki/Azimuth\n",
         "ax.view_init(elev=5, azim=-45)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -775,7 +779,7 @@
         "plt.hist(y, bins=n)\n",
         "plt.title('Distribution of ground truth');"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -837,7 +841,7 @@
         "model.add(Dense(units=1, input_dim=2))\n",
         "model.summary()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -870,7 +874,7 @@
         "y_pred = model.predict(x)\n",
         "y_pred.shape"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -899,7 +903,7 @@
       "source": [
         "plot_decision_boundaries(model, X, y_true)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -957,7 +961,7 @@
         "# ax.view_init(elev=20, azim=-75)\n",
         "# ax.view_init(elev=10, azim=-40)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -991,7 +995,7 @@
         "plt.legend(['ground truth', 'prediction'])\n",
         "plt.title('Distribution of predictions and ground truth');"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1025,7 +1029,7 @@
       "source": [
         "# y_pred"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1036,7 +1040,7 @@
       "source": [
         "threshold = 0.5"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1052,7 +1056,7 @@
         "y_pred_binary = (y_pred > threshold).astype(int).ravel()\n",
         "y_pred_binary"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1121,7 +1125,7 @@
         "# ax.view_init(elev=20, azim=-75)\n",
         "# ax.view_init(elev=10, azim=-40)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1177,7 +1181,7 @@
       "source": [
         "tf.losses.mean_squared_error(y_true=tf.squeeze(y), y_pred=tf.squeeze(y_pred)).numpy()"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1219,7 +1223,7 @@
         "accuracy.update_state(y, y_pred_binary)\n",
         "accuracy.result().numpy()"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1251,7 +1255,7 @@
         "accuracy.update_state(y, y_pred)\n",
         "accuracy.result().numpy()"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1347,7 +1351,7 @@
         "  # Update the weights of our neuron.\n",
         "  optimizer.apply_gradients(zip(gradients, model.trainable_weights))"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1377,7 +1381,7 @@
         "\n",
         "plt.plot(losses);"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1411,7 +1415,7 @@
         "\n",
         "plt.plot(accuracies);"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1442,7 +1446,7 @@
         "y_pred_binary = (y_pred > threshold).astype(int).ravel()\n",
         "y_pred_binary"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1480,7 +1484,7 @@
       "source": [
         "plot_decision_boundaries(model, X, y_true)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1531,7 +1535,7 @@
         "# ax.view_init(elev=20, azim=-75)\n",
         "# ax.view_init(elev=10, azim=-40)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1565,7 +1569,7 @@
         "plt.legend(['ground truth', 'prediction'])\n",
         "plt.title('Distribution of predictions and ground truth');"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1626,7 +1630,7 @@
         "# ax.view_init(elev=20, azim=-75)\n",
         "# ax.view_init(elev=10, azim=-40)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1687,7 +1691,7 @@
         "# replaces loop\n",
         "history = model.fit(x, y_true, epochs=1500, verbose=0)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1712,7 +1716,7 @@
         "loss, accuracy = model.evaluate(x, y_true, verbose=0)\n",
         "loss, accuracy"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1745,7 +1749,7 @@
         "\n",
         "plt.plot(history.history['loss']);"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1779,7 +1783,7 @@
         "\n",
         "plt.plot(history.history['accuracy']);"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1844,7 +1848,7 @@
         "model.add(Dense(units=1, input_dim=2, activation='sigmoid'))\n",
         "model.summary()"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1924,7 +1928,7 @@
         "# MSE will never be more than one\n",
         "tf.losses.mean_squared_error(y_true=[[1], [1], [1]], y_pred=[[0.1], [0.01], [0.001]]).numpy()"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1953,7 +1957,7 @@
         "# imperfections give unbounded losses (uses ln)\n",
         "tf.losses.binary_crossentropy(y_true=[[1], [1], [1]], y_pred=[[0.1], [0.01], [0.001]]).numpy()"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1987,7 +1991,7 @@
         "\n",
         "history = model.fit(x, y_true, epochs=2000, verbose=0)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2012,7 +2016,7 @@
         "loss, accuracy = model.evaluate(x, y_true, verbose=0)\n",
         "loss, accuracy"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2046,7 +2050,7 @@
         "\n",
         "plt.plot(history.history['loss']);"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2080,7 +2084,7 @@
         "\n",
         "plt.plot(history.history['accuracy']);"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2105,7 +2109,7 @@
       "source": [
         "y_pred = model.predict(x)"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2142,7 +2146,7 @@
         "# ax.view_init(elev=20, azim=-75)\n",
         "# ax.view_init(elev=10, azim=-40)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2176,7 +2180,7 @@
         "plt.legend(['ground truth', 'prediction'])\n",
         "plt.title('Distribution of predictions, more dense around extremes');"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2201,7 +2205,7 @@
       "source": [
         "y_pred_binary = (y_pred > threshold).astype(int).ravel()"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2246,7 +2250,7 @@
         "# ax.view_init(elev=20, azim=-75)\n",
         "# ax.view_init(elev=10, azim=-40)"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2276,7 +2280,7 @@
       "source": [
         "plot_decision_boundaries(model, X, y_true)"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2364,7 +2368,7 @@
         "model.add(Dense(units=1, activation='sigmoid'))\n",
         "model.summary()"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2408,7 +2412,7 @@
         "\n",
         "history = model.fit(x, y_true, epochs=1500, verbose=0)"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2433,7 +2437,7 @@
         "loss, accuracy = model.evaluate(x, y_true, verbose=0)\n",
         "loss, accuracy"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2467,7 +2471,7 @@
         "\n",
         "plt.plot(history.history['loss']);"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2501,7 +2505,7 @@
         "\n",
         "plt.plot(history.history['accuracy']);"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2531,7 +2535,7 @@
       "source": [
         "plot_decision_boundaries(model, X, y_true)"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2557,7 +2561,7 @@
         "y_pred = model.predict(x)\n",
         "y_pred_binary = (y_pred > threshold).astype(int).ravel()"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2602,7 +2606,7 @@
         "# ax.view_init(elev=20, azim=-75)\n",
         "# ax.view_init(elev=10, azim=-40)"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2636,7 +2640,7 @@
         "plt.legend(['ground truth', 'prediction'])\n",
         "plt.title('Distribution of predictions, only possible by extreme non-linearity');"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2709,7 +2713,7 @@
         "model.add(Dense(units=2, activation='softmax')) # the change is here\n",
         "model.summary()"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2753,7 +2757,7 @@
         "\n",
         "history = model.fit(x, y_true, epochs=1500, verbose=0)"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2778,7 +2782,7 @@
         "loss, accuracy = model.evaluate(x, y_true, verbose=0)\n",
         "loss, accuracy"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2812,7 +2816,7 @@
         "\n",
         "plt.plot(history.history['loss']);"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2846,7 +2850,7 @@
         "\n",
         "plt.plot(history.history['accuracy']);"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2877,7 +2881,7 @@
         "y_pred_binary = y_pred.argmax(axis=1) # new way of determining the prediction\n",
         "y_pred.shape, y_pred_binary.shape"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2906,7 +2910,7 @@
         "y_one_hot = tf.one_hot(y, 2)\n",
         "y.shape, y_one_hot.shape"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2936,7 +2940,7 @@
         "accuracy.update_state(y_one_hot, y_pred)\n",
         "accuracy.result().numpy()"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2965,7 +2969,7 @@
       "source": [
         "plot_decision_boundaries(model, X, y_true)"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3010,7 +3014,7 @@
         "\n",
         "  sns.heatmap(cm, annot=True, xticklabels=uniq_labels, yticklabels=uniq_labels, cmap='Blues', fmt='d')"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3026,7 +3030,7 @@
       "source": [
         "plot_cm(model, X, y)"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3064,7 +3068,7 @@
       "source": [
         "model.summary()"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3099,7 +3103,7 @@
         "# https://www.tensorflow.org/guide/keras/save_and_serialize\n",
         "model.save('classifier.h5')"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3114,7 +3118,7 @@
       "source": [
         "!ls -l"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3135,7 +3139,7 @@
       "source": [
         "loaded_model = tf.keras.models.load_model('classifier.h5')"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3152,7 +3156,7 @@
         "y_pred_binary = y_pred.argmax(axis=1) # new way of determining the prediction\n",
         "y_pred_binary"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
